--- a/osmosis/osmosis.css
+++ b/osmosis/osmosis.css
@@ -2,22 +2,112 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  font-family: sans-serif;
 }
 
 .container {
   height: 100%;
+  display: -ms-grid;
+  display: grid;
+  padding: 20px;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  -ms-grid-columns: 1fr auto 1fr;
+      grid-template-columns: 1fr auto 1fr;
+  -ms-grid-rows: 1fr auto 1fr;
+      grid-template-rows: 1fr auto 1fr;
+      grid-template-areas: "top    top    top" "left   main   right" "bottom bottom bottom";
+}
+
+.main {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: main;
+}
+
+.main canvas {
+  display: block;
+  border: 4px solid black;
+}
+
+.controls {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: bottom;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.settings {
+  -ms-grid-row: 2;
+  -ms-grid-column: 3;
+  grid-area: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.settings > div {
+  margin-bottom: 1rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.settings input[type="number"] {
+  font-family: monospace;
+  width: 100%;
+}
+
+.settings .radio-group {
+  display: -ms-grid;
+  display: grid;
+  -webkit-column-gap: 0.5em;
+          column-gap: 0.5em;
+  -ms-grid-columns: auto 1fr;
+      grid-template-columns: auto 1fr;
+  font-size: 80%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.stats {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.container canvas {
-  border: 4px solid black;
 }
 /*# sourceMappingURL=osmosis.css.map */
